--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 	font-family: "Roboto", sans-serif;
 }
 
-#container {
-	margin: 0 auto;
+.container {
+	margin: 20px auto;
 	width: 50%;
 	border: 1px solid black;
 	border-radius: 5px;
 	display: flex;
 	flex-direction: column;
 	background-color: tomato;
+	transition: width 2s, height 2s, background-color 2s, transform 2s;
 }
 
 #timer {
@@ -38,4 +39,29 @@
 	border: none;
 }
 
+input {
+	border-radius: 5px;
+	border: none;
+	width: 50px;
+	text-align: center;
+	font-size: 20px;
+}
 
+input:focus {
+	outline: none;
+}
+
+label {
+	font-size: 20px;
+	color: white;
+}
+
+#wrapper {
+	margin: 20px;
+}
+
+.flex-item {
+	display: flex;
+	margin: 20px 0;
+	justify-content: space-between;
+}
