--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .container {
 	margin: 20px auto;
+	padding: 15px;
 	width: 50%;
 	border: 1px solid black;
 	border-radius: 5px;
@@ -31,7 +32,7 @@
 
 .my-button {
 	font-size: 20px;
-	padding: 10px 0;
+	padding: 10px 10px;
 	color: white;
 	background-color: black;
 	border-radius: 4px;
@@ -64,4 +65,9 @@ label {
 	display: flex;
 	margin: 20px 0;
 	justify-content: space-between;
+}
+
+#button-container {
+	display: flex;
+	justify-content: space-around;
 }
