--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@
 	border: none;
 }
 
+.my-button:disabled {
+	background-color: darkgray;
+	color: black;
+}
+
 input {
 	border-radius: 5px;
 	border: none;
